--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,6 +20,9 @@ jobs:
     environment: production
 
     env:
+      AWS_ACCESS_KEY_ID : ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
       TF_VAR_bronze_bucket: ${{ secrets.BRONZE_BUCKET_NAME }}
       TF_VAR_silver_bucket: ${{ secrets.SILVER_BUCKET_NAME }}
       AWS_REQUEST_CHECKSUM_CALCULATION: when_required
