--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,9 +23,9 @@ jobs:
       AWS_ACCESS_KEY_ID : ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
-      TF_VAR_bronze_bucket: ${{ secrets.BRONZE_BUCKET_NAME }}
-      TF_VAR_silver_bucket: ${{ secrets.SILVER_BUCKET_NAME }}
       AWS_REQUEST_CHECKSUM_CALCULATION: when_required
+      TF_VAR_bronze_bucket: ${{ secrets.TF_VAR_BRONZE_BUCKET }}
+      TF_VAR_silver_bucket: ${{ secrets.TF_VAR_SILVER_BUCKET }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
